kubernetes/apps/paperless/paperless-ngx/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/instance: paperless
spec:
  hostnames:
    - paperless.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: paperless
          namespace: paperless
          port: 80
          weight: 1
